--- a/frontend/src/includes/variables.scss
+++ b/frontend/src/includes/variables.scss
@@ -1,6 +1,7 @@
 $bg-light: #FDFDFD; 
 $font-main-color: #526570;
 $font-main2-color: #5A5863;
+$font-main2-color-50: rgba($font-main2-color, 0.5);
 $font-logo-color: #60CE78;
 $font-hover-color: #27AE60;
 $button-main-color: #5DBF16;
