--- a/frontend/src/pages/home/blocks/section3/section3.scss
+++ b/frontend/src/pages/home/blocks/section3/section3.scss
@@ -1,9 +1,16 @@
 @import "./../../../../includes/variables.scss";
 
 .section3 {
-  width: 1200px;
+  max-width: 1200px;
   display: flex;
   margin-bottom: 124px;
+
+  @media screen and (min-width: $screen-xs) and (max-width: $screen-xl - 1px) {
+    display: flex;
+    flex-direction: column;
+  }
+
+
 
   &__article {
     width: 560px;
@@ -18,6 +25,11 @@
     span {
       color: $font-logo-color;
     }
+
+    @media screen and (min-width: $screen-xs) and (max-width: $screen-xl - 1px) {
+      text-align: center;
+    }
+  
   }
 
   &__description {
@@ -30,8 +42,15 @@
     span {
       font-weight: bold;
       font-style: normal;
-      color: rgba($color: #5A5863,  $alpha: 0.9)
+      color: rgba($color: #5a5863, $alpha: 0.9);
     }
+
+    @media screen and (min-width: $screen-xs) and (max-width: $screen-xl - 1px) {
+      text-align: center;
+      margin: auto;
+      margin-bottom: 44px;
+    }
+
   }
 
   &__logos {
@@ -39,6 +58,11 @@
     flex-direction: column;
     width: 100%;
     padding-left: 70px;
+
+    @media screen and (min-width: $screen-xs) and (max-width: $screen-xl - 1px) {
+      padding: 0;
+    }
+
   }
 
   &__logos-row {
@@ -47,17 +71,42 @@
     margin-bottom: 38px;
     display: flex;
     justify-content: space-between;
+
+    @media screen and (min-width: $screen-xs) and (max-width: $screen-xl - 1px) {
+      margin: 0;
+      &:first-child{
+        display: none;
+      }
+    }
   }
 
   &__button {
     width: 200px;
+
+    @media screen and (min-width: $screen-xs) and (max-width: $screen-xl - 1px) {
+      margin: auto;
+    }
+
   }
 
   &__wrap {
     height: 669px;
-    background-image:  radial-gradient(86.58% 86.58% at 50% 50%, #FDFDFD 0%, #F1F1F1 100%);
+    background-image: radial-gradient(86.58% 86.58% at 50% 50%, #fdfdfd 0%, #f1f1f1 100%);
     display: flex;
     justify-content: center;
     align-items: flex-end;
+
+    @media screen and (min-width: $screen-xs) and (max-width: $screen-xl - 1px) {
+      max-width: 100%;
+      height: 1010px;
+    }
+  
+  }
+
+  &__logo-item{
+    @media screen and (min-width: $screen-xs) and (max-width: $screen-xl - 1px) {
+      display: none;
+    }
+
   }
 }
