--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -1,5 +1,6 @@
 @import "./../../includes/variables.scss";
 @import "./../../blocks/header/header.scss";
+@import "./../../blocks/footer/footer.scss";
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
