--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Light.eot");
   src: local("\263A"), url("/fonts/Montserrat-Light.woff") format("woff"), url("/fonts/Montserrat-Light.ttf") format("truetype"), url("/fonts/Montserrat-Light.svg") format("svg");
   font-weight: 300;
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Regular.eot");
   src: local("\263A"), url("/fonts/Montserrat-Regular.woff") format("woff"), url("/fonts/Montserrat-Regular.ttf") format("truetype"), url("/fonts/Montserrat-Regular.svg") format("svg");
   font-weight: 400;
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Medium.eot");
   src: local("\263A"), url("/fonts/Montserrat-Medium.woff") format("woff"), url("/fonts/Montserrat-Medium.ttf") format("truetype"), url("/fonts/Montserrat-Medium.svg") format("svg");
   font-weight: 500;
@@ -28,7 +28,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("/fonts/Montserrat-SemiBold.eot");
   src: local("\263A"), url("/fonts/Montserrat-SemiBold.woff") format("woff"), url("/fonts/Montserrat-SemiBold.ttf") format("truetype"), url("/fonts/Montserrat-SemiBold.svg") format("svg");
   font-weight: 600;
@@ -37,7 +37,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Bold.eot");
   src: local("\263A"), url("/fonts/Montserrat-Bold.woff") format("woff"), url("/fonts/Montserrat-Bold.ttf") format("truetype"), url("/fonts/Montserrat-Bold.svg") format("svg");
   font-weight: 700;
@@ -46,7 +46,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("/fonts/Montserrat-ExtraBold.eot");
   src: local("\263A"), url("/fonts/Montserrat-ExtraBold.woff") format("woff"), url("/fonts/Montserrat-ExtraBold.ttf") format("truetype"), url("/fonts/Montserrat-ExtraBold.svg") format("svg");
   font-weight: 800;
@@ -55,7 +55,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Black.eot");
   src: local("\263A"), url("/fonts/Montserrat-Black.woff") format("woff"), url("/fonts/Montserrat-Black.ttf") format("truetype"), url("/fonts/Montserrat-Black.svg") format("svg");
   font-weight: 900;
