--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,7 @@
 @font-face {
   font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Light.eot");
-  src: local("\263A"), url("/fonts/Montserrat-Light.woff") format("woff"), url("/fonts/Montserrat-Light.ttf") format("truetype"), url("/fonts/Montserrat-Light.svg") format("svg");
+  src: local("☺"), url("/fonts/Montserrat-Light.woff") format("woff"), url("/fonts/Montserrat-Light.ttf") format("truetype"), url("/fonts/Montserrat-Light.svg") format("svg");
   font-weight: 300;
   font-display: swap;
   font-style: normal;
@@ -12,7 +12,7 @@
 @font-face {
   font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Regular.eot");
-  src: local("\263A"), url("/fonts/Montserrat-Regular.woff") format("woff"), url("/fonts/Montserrat-Regular.ttf") format("truetype"), url("/fonts/Montserrat-Regular.svg") format("svg");
+  src: local("☺"), url("/fonts/Montserrat-Regular.woff") format("woff"), url("/fonts/Montserrat-Regular.ttf") format("truetype"), url("/fonts/Montserrat-Regular.svg") format("svg");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -21,7 +21,7 @@
 @font-face {
   font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Medium.eot");
-  src: local("\263A"), url("/fonts/Montserrat-Medium.woff") format("woff"), url("/fonts/Montserrat-Medium.ttf") format("truetype"), url("/fonts/Montserrat-Medium.svg") format("svg");
+  src: local("☺"), url("/fonts/Montserrat-Medium.woff") format("woff"), url("/fonts/Montserrat-Medium.ttf") format("truetype"), url("/fonts/Montserrat-Medium.svg") format("svg");
   font-weight: 500;
   font-display: swap;
   font-style: normal;
@@ -30,7 +30,7 @@
 @font-face {
   font-family: 'Montserrat';
   src: url("/fonts/Montserrat-SemiBold.eot");
-  src: local("\263A"), url("/fonts/Montserrat-SemiBold.woff") format("woff"), url("/fonts/Montserrat-SemiBold.ttf") format("truetype"), url("/fonts/Montserrat-SemiBold.svg") format("svg");
+  src: local("☺"), url("/fonts/Montserrat-SemiBold.woff") format("woff"), url("/fonts/Montserrat-SemiBold.ttf") format("truetype"), url("/fonts/Montserrat-SemiBold.svg") format("svg");
   font-weight: 600;
   font-display: swap;
   font-style: normal;
@@ -39,7 +39,7 @@
 @font-face {
   font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Bold.eot");
-  src: local("\263A"), url("/fonts/Montserrat-Bold.woff") format("woff"), url("/fonts/Montserrat-Bold.ttf") format("truetype"), url("/fonts/Montserrat-Bold.svg") format("svg");
+  src: local("☺"), url("/fonts/Montserrat-Bold.woff") format("woff"), url("/fonts/Montserrat-Bold.ttf") format("truetype"), url("/fonts/Montserrat-Bold.svg") format("svg");
   font-weight: 700;
   font-display: swap;
   font-style: normal;
@@ -48,7 +48,7 @@
 @font-face {
   font-family: 'Montserrat';
   src: url("/fonts/Montserrat-ExtraBold.eot");
-  src: local("\263A"), url("/fonts/Montserrat-ExtraBold.woff") format("woff"), url("/fonts/Montserrat-ExtraBold.ttf") format("truetype"), url("/fonts/Montserrat-ExtraBold.svg") format("svg");
+  src: local("☺"), url("/fonts/Montserrat-ExtraBold.woff") format("woff"), url("/fonts/Montserrat-ExtraBold.ttf") format("truetype"), url("/fonts/Montserrat-ExtraBold.svg") format("svg");
   font-weight: 800;
   font-display: swap;
   font-style: normal;
@@ -57,7 +57,7 @@
 @font-face {
   font-family: 'Montserrat';
   src: url("/fonts/Montserrat-Black.eot");
-  src: local("\263A"), url("/fonts/Montserrat-Black.woff") format("woff"), url("/fonts/Montserrat-Black.ttf") format("truetype"), url("/fonts/Montserrat-Black.svg") format("svg");
+  src: local("☺"), url("/fonts/Montserrat-Black.woff") format("woff"), url("/fonts/Montserrat-Black.ttf") format("truetype"), url("/fonts/Montserrat-Black.svg") format("svg");
   font-weight: 900;
   font-display: swap;
   font-style: normal;
